--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
             <artifactId>langchain4j-core</artifactId>
             <version>1.1.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.milvus/milvus-sdk-java -->
+        <dependency>
+            <groupId>io.milvus</groupId>
+            <artifactId>milvus-sdk-java</artifactId>
+            <version>2.5.10</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
