--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,21 @@
-version: '3.8'
-
+#services:
+#  milvus:
+#    image: milvusdb/milvus:latest
+#    container_name: milvus
+#    command: ["milvus", "run", "standalone"]
+#    ports:
+#      - "19530:19530"   # gRPC
+#      - "19121:19121"   # HTTP REST
+#    environment:
+#      TZ: Asia/Shanghai
 services:
-  milvus:
+  milvus-standalone:
     image: milvusdb/milvus:latest
     container_name: milvus
-    command: ["milvus", "run", "standalone"]
     ports:
-      - "19530:19530"   # gRPC
-      - "19121:19121"   # HTTP REST
+      - "19530:19530"
+      - "9091:9091"
     environment:
       TZ: Asia/Shanghai
+    volumes:
+      - ./volumes/milvus:/var/lib/milvus
