--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 spring:
     datasource:
-        url: jdbc:mysql://localhost:3306/interview_radar?useSSL=false&serverTimezone=Asia/Shanghai
-        username: root
-        password: abc123
+        url: jdbc:mysql://115.190.83.184:3306/interview_radar?useSSL=false&serverTimezone=Asia/Shanghai
+        username: admin
+        password: Sj.4330450
         hikari:
             maximum-pool-size: 300     # 连接池最大连接数
             minimum-idle: 10          # 最小空闲连接
@@ -49,7 +49,7 @@ threadpool:
 
 
 milvus:
-    host: 192.168.81.131
+    host: 115.190.83.184
     port: 19530
     embedding-dim: 1024
 
