--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,14 +19,14 @@ langchain4j:
         chat-model:
             timeout: 600s
 #           deepseek
-#            api-key: sk-45d3870db5ee4d2b8d4c9ade425dbadd
-#            base-url: https://api.deepseek.com/v1
-#            model-name: deepseek-reasoner
+            api-key: sk-45d3870db5ee4d2b8d4c9ade425dbadd
+            base-url: https://api.deepseek.com/v1
+            model-name: deepseek-chat
 
 #           aliyun
-            api-key: sk-c8537643758b4d8da98f06a99dc603d9
-            base-url: https://dashscope.aliyuncs.com/compatible-mode/v1
-            model-name: qwen-plus
+#            api-key: sk-c8537643758b4d8da98f06a99dc603d9
+#            base-url: https://dashscope.aliyuncs.com/compatible-mode/v1
+#            model-name: qwen-plus
 
 
 aliyun:
